# pi_montecarlo

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: dummy_canvas.h
src/: dummy_canvas.cpp  pi_montecarlo.cpp
